# pyreposync

./: .gitignore  README.rst  init.sh  pyproject.toml  reposync.ini  setup.py
contrib/: pyreposync  reposync.ini  reposync_2.ini  reposync_deb822.ini
pyreposync/: __init__.py  deb_sync.py  downloader.py  exceptions.py  rpm_sync.py  sync_deb.py  sync_deb822.py  sync_generic.py  sync_rpm.py
